--- a/pages/prendas.html
+++ b/pages/prendas.html
@@ -1,89 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>prendas</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
-        <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-              <a class="navbar-brand" href="#">Abret_Closet</a>
-              <a class="navbar-brand" href="#">
-                <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24" class="d-inline-block align-text-top">      </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./prendas.html">Prendas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./fechas.html">Fechas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./ubicacion.html" >Ubicación</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href= "./contacto.html" >Nosotros</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <body class="body">
-    <main class="mainprendas"> 
-      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="../imagen/conjunto jean.jpeg" class="d-block w-100" alt="imagen de conjunto jean">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>1 CONJUNTO</h5>
-              <p>"No vendemos estilo. Ese sólo tú puedes definirlo. Pero sí vendemos prendas asombrosas con las cuales podrás presumirlo y lucirlo".</p>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="../imagen/conjunto con zapatos.jpeg" class="d-block w-100" alt="conjunto ropa mujer">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>2 CONJUNTO</h5>
-              <p>Hoy @abret_closet te ofrece ideas para que armes tus conjuntos y estés preparada para cualquier ocasión...</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../imagen/conjunto.jpeg" class="d-block w-100" alt="imágen de camisolas">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>3 CONJUNTO</h5>
-              <p>OUTFIT DE MUJER👗💕 CON TODA LA ONDA.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>prendas</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.css">
+</head>
+<header>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Abret_Closet</a>
+      <a class="navbar-brand" href="#">
+        <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24"
+          class="d-inline-block align-text-top"> </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./prendas.html">Prendas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./fechas.html">Fechas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./ubicacion.html">Ubicación</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacto.html">Nosotros</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<body class="body">
+  <main class="mainprendas">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-           </main>   
-    <footer class="footer">
-        <p class="creador">@ Marcela Fernanda Peralta 2022</p>
-    </footer>
-    
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="../imagen/conjunto jean.jpeg" class="d-block w-100" alt="imagen de conjunto jean">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>1 CONJUNTO</h5>
+            <p>"No vendemos estilo. Ese sólo tú puedes definirlo. Pero sí vendemos prendas asombrosas con las cuales
+              podrás presumirlo y lucirlo".</p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="../imagen/conjunto con zapatos.jpeg" class="d-block w-100" alt="conjunto ropa mujer">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>2 CONJUNTO</h5>
+            <p>Hoy @abret_closet te ofrece ideas para que armes tus conjuntos y estés preparada para cualquier
+              ocasión...</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../imagen/conjunto.jpeg" class="d-block w-100" alt="imágen de camisolas">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>3 CONJUNTO</h5>
+            <p>OUTFIT DE MUJER👗💕 CON TODA LA ONDA.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </main>
+  <footer class="footer">
+    <p class="creador">@ Marcela Fernanda Peralta 2022</p>
+  </footer>
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
