--- a/index.html
+++ b/index.html
@@ -64,15 +64,24 @@
           </div>
           <div class="col">
             <p class="segunda">
-              Dale una segunda oportunidad a estas prendas </p>
+              FERIA CIRCULAR
+            una alternativa sustentable para un vestir consciente
+            </p>
             <div class="video">
               <iframe width="300" height="300" src="imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4" title="Preventa"
                 frameborder="0"
                 llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               </p>
+              <div class="video">
+                <iframe width="300" height="300" src="../imagen/oferta.mp4"
+                  title="ofertas" frameborder="0"
+                  llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
             </div>
-
+          </div>
+        </div>
+      </div>
     </section>
     <span class="alimento">Si traes un alimento no perecedero tenes un descuento en tu compra</span>
 
