--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -42,13 +42,38 @@
         <body class="body">
         <main class="main">
             <span>Ubicación</span>
-                    <div class="card" style="width: 30rem;">
+            <section>
+                    <div class="card" style="width: 50rem;">
                     <img src="../imagen/ubicacion.png" class="card-img-top" alt="ubicación en el mapa">
+                    </div>
                     <div class="card-body">
                       <p class="card-text">SANTA ANA 1042, entre Italia y Las Heras, San Miguel</p>
                       <a href="https://www.google.com/maps/dir/-34.5596345,-58.7030331/abret.closet/@-34.5580607,-58.7213877,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x95bcbdfda50b7281:0xcfeb50858bb02956!2m2!1d-58.7223398!2d-34.5615495" class="card-link">Google Maps</a>
                     </div>
-            
+            </section>
+            <section>                   
+                      <div class="card-group">
+                        <div class="card">
+                          <img src="../imagen/fotos en la feria (1).jpeg" class="card-img-top" alt="Estamos de feria">
+                          <div class="card-body">
+                            <h5 class="card-title">FERIA</h5>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img src="../imagen/fotos en la feria (2).jpeg" class="card-img-top" alt="Abret_Closet">
+                          <div class="card-body">
+                            <h5 class="card-title">Abret_Closet</h5>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img src="../imagen/fotos en la feria (3).jpeg" class="card-img-top" alt="seguimos en la feria">
+                          <div class="card-body">
+                            <h5 class="card-title">VISITANOS!</h5>
+                            </p>
+                           </div>
+                          </div>
+                      </div>
+            </section>
         </main>
         
 <!-- JavaScript Bundle with Popper -->
