--- a/pages/index.html
+++ b/pages/index.html
@@ -64,7 +64,8 @@
           </div>
           <div class="col">
             <p class="segunda">
-              Dale una segunda oportunidad a estas prendas </p>
+              FERIA CIRCULAR
+              una alternativa sustentable para un vestir consciente </p>
             <div class="video">
               <iframe width="300" height="300" src="../imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4"
                 title="Preventa" frameborder="0"
@@ -72,7 +73,16 @@
                 allowfullscreen></iframe>
               </p>
             </div>
-
+            <div class="video">
+              <iframe width="300" height="300" src="../imagen/oferta.mp4"
+                title="ofertas" frameborder="0"
+                llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              </p>
+            </div>
+          </div>  
+        </div>
+      </div>  
     </section>
     <span class="alimento">Si traes un alimento no perecedero tenes un descuento en tu compra</span>
 
