agregando sass y seo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col">
             <p class="segunda">
               FERIA CIRCULAR
-            una alternativa sustentable para un vestir consciente
+              una alternativa sustentable para un vestir consciente
             </p>
             <div class="video">
               <iframe width="300" height="300" src="imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4" title="Preventa"
@@ -74,10 +74,10 @@
                 allowfullscreen></iframe>
               </p>
               <div class="video">
-                <iframe width="300" height="300" src="../imagen/oferta.mp4"
-                  title="ofertas" frameborder="0"
+                <iframe width="300" height="300" src="../imagen/oferta.mp4" title="ofertas" frameborder="0"
                   llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
+              </div>
             </div>
           </div>
         </div>
