--- a/pages/prendas.html
+++ b/pages/prendas.html
@@ -47,49 +47,92 @@
 
 <body class="body">
   <main class="mainprendas">
-
-
-
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img src="../imagen/conjunto jean.jpeg" class="d-block w-100" alt="imagen de conjunto jean">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>1 CONJUNTO</h5>
-            <p>"No vendemos estilo. Ese sólo tú puedes definirlo. Pero sí vendemos prendas asombrosas con las cuales
-              podrás presumirlo y lucirlo".</p>
-          </div>
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="../imagen/conjunto con zapatos.jpeg" class="d-block w-100" alt="conjunto ropa mujer">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>2 CONJUNTO</h5>
-            <p>Hoy @abret_closet te ofrece ideas para que armes tus conjuntos y estés preparada para cualquier
-              ocasión...</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="../imagen/conjunto.jpeg" class="d-block w-100" alt="imágen de camisolas">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>3 CONJUNTO</h5>
-            <p>OUTFIT DE MUJER👗💕 CON TODA LA ONDA.</p>
+    <div class="row row-cols-md-2 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/conjunto con zapatos.jpeg" class="card-img-top" alt="conjunto 1">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 1</h5>
+            <p class="card-text">Remera Hippie + Jean + Sandalias rosa viejo</p>
+            <p class="card-text"><small class="text-muted">$2500</small></p>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/conjunto jean.jpeg" class="card-img-top" alt="conjunto 2">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 2</h5>
+            <p class="card-text">CONJUNTO 2: Remera básica + Jean + Cartera</p>
+            <p class="card-text"><small class="text-muted">$2500</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/conjunto mujer.jpeg" class="card-img-top" alt="conjunto 3">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 3</h5>
+            <p class="card-text">CONJUNTO 2: Remera básica + Jean + Cartera</p>
+            <p class="card-text"><small class="text-muted">$4500</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/jean y camisa.jpeg" class="card-img-top" alt="conjunto 4">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 4</h5>
+            <p class="card-text">Camisa + Jean + botas</p>
+            <p class="card-text"><small class="text-muted">$3200</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row row-cols-md-2 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/jean y campera.jpeg" class="card-img-top" alt="conjunto 5">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 5</h5>
+            <p class="card-text">Remera con diseño + Jean + Campera de Jogging</p>
+            <p class="card-text"><small class="text-muted">$3500 y por $300 más te llevas la riñonera (precio normal
+                $700)</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/vestido.jpeg" class="card-img-top" alt="conjunto 6">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 6</h5>
+            <p class="card-text">Vestido cuadrille + zapatos negros</p>
+            <p class="card-text"><small class="text-muted">$2000 y por $300 más te llevas la riñonera (precio normal
+                $700)</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/conjunto.jpeg" class="card-img-top" alt="conjunto 7">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 7</h5>
+            <p class="card-text">Pantalón de vestir + blusa + zapatos</p>
+            <p class="card-text"><small class="text-muted">$2400 y te llevas de regalo un pañuelo haciendo juego (precio
+                regular $400)</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="../imagen/vestido (2).jpeg" class="card-img-top" alt="conjunto 8">
+          <div class="card-body">
+            <h5 class="card-title">CONJUNTO 8</h5>
+            <p class="card-text">Vestido Hippie + camperita de jean</p>
+            <p class="card-text"><small class="text-muted">Ambas por $2100</small></p>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="footer">
