--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,85 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ubicación</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles.css">
-    </head>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-              <a class="navbar-brand" href="#">Abret_Closet</a>
-              <a class="navbar-brand" href="#">
-                <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24" class="d-inline-block align-text-top">      </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/prendas.html">Prendas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/fechas.html">Fechas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/ubicacion.html" >Ubicación</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href= "../pages/contacto.html" >Nosotros</a>
-                  </li>
-                </ul>
-              </div>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ubicación</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles.css">
+</head>
+<header>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Abret_Closet</a>
+      <a class="navbar-brand" href="#">
+        <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24"
+          class="d-inline-block align-text-top"> </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/prendas.html">Prendas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/fechas.html">Fechas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">Nosotros</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<body class="body">
+  <main class="main">
+    <span>Ubicación</span>
+    <section>
+      <div class="card" style="width: 50rem;">
+        <img src="../imagen/ubicacion.png" class="img-fluid" alt="ubicación en el mapa">
+      </div>
+      <div class="card-body">
+        <p class="card-text">SANTA ANA 1042, entre Italia y Las Heras, San Miguel</p>
+        <a href="https://www.google.com/maps/dir/-34.5596345,-58.7030331/abret.closet/@-34.5580607,-58.7213877,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x95bcbdfda50b7281:0xcfeb50858bb02956!2m2!1d-58.7223398!2d-34.5615495"
+          class="card-link">Google Maps</a>
+      </div>
+    </section>
+    <section>
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="../imagen/fotos en la feria (1).jpeg" class="d-block w-100" alt="foto de la gente en la feria">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>FERIA</h5>
             </div>
-          </nav>
-        </header>
-        <body class="body">
-        <main class="main">
-            <span>Ubicación</span>
-            <section>
-                    <div class="card" style="width: 50rem;">
-                    <img src="../imagen/ubicacion.png" class="card-img-top" alt="ubicación en el mapa">
-                    </div>
-                    <div class="card-body">
-                      <p class="card-text">SANTA ANA 1042, entre Italia y Las Heras, San Miguel</p>
-                      <a href="https://www.google.com/maps/dir/-34.5596345,-58.7030331/abret.closet/@-34.5580607,-58.7213877,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x95bcbdfda50b7281:0xcfeb50858bb02956!2m2!1d-58.7223398!2d-34.5615495" class="card-link">Google Maps</a>
-                    </div>
-            </section>
-            <section>                   
-                      <div class="card-group">
-                        <div class="card">
-                          <img src="../imagen/fotos en la feria (1).jpeg" class="card-img-top" alt="Estamos de feria">
-                          <div class="card-body">
-                            <h5 class="card-title">FERIA</h5>
-                          </div>
-                        </div>
-                        <div class="card">
-                          <img src="../imagen/fotos en la feria (2).jpeg" class="card-img-top" alt="Abret_Closet">
-                          <div class="card-body">
-                            <h5 class="card-title">Abret_Closet</h5>
-                          </div>
-                        </div>
-                        <div class="card">
-                          <img src="../imagen/fotos en la feria (3).jpeg" class="card-img-top" alt="seguimos en la feria">
-                          <div class="card-body">
-                            <h5 class="card-title">VISITANOS!</h5>
-                            </p>
-                           </div>
-                          </div>
-                      </div>
-            </section>
-        </main>
-        
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    </body>
-    <footer class="footer">
-        <p class="creador">@ Marcela Fernanda Peralta 2022</p>
-    </footer>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="../imagen/fotos en la feria (2).jpeg" class="d-block w-100" alt="conjunto ropa mujer">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Abret_Closet</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../imagen/fotos en la feria (3).jpeg" class="d-block w-100" alt="imágen de camisolas">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>VISITANOS</h5>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+  </main>
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
+<footer class="footer">
+  <p class="creador">@ Marcela Fernanda Peralta 2022</p>
+</footer>
+
 </html>
