--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,9 @@
   <title>contacto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../sass/estilos.css">
+  <meta name="description" content="contacto">
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
 
 </head>
 <header>
@@ -101,11 +103,6 @@
             </p>
           </div>
         </div>
-
-
-
-
-
       </div>
     </div>
     </div>
@@ -116,7 +113,7 @@
         Colaboramos con el comedor SOLCITO</span>
       <span class="colaboramos">¿Querés donar tu ropa? CONTACTANOS</span>
     </section>
-    <div class="form-floating mb-3">
+    <div class="form-floating">
       <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
       <label for="floatingInput">Email address</label>
     </div>
@@ -124,8 +121,7 @@
       <input type="celular" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">celular</label>
     </div>
-
-    </section>
+  </section>
   </main>
   <footer class="footer">
     <p class="creador">@ Marcela Fernanda Peralta 2022</p>
