--- a/pages/fechas.html
+++ b/pages/fechas.html
@@ -8,7 +8,9 @@
   <title>fechas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../sass/estilos.css">
+  <meta name="description" content="fechas de las ferias">
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
 </head>
 
 <body class="body">
