--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -8,7 +8,9 @@
   <title>ubicación</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../sass/estilos.css">
+  <meta name="description" content="ubicación para comprar ropa usada">
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-light">
@@ -48,7 +50,7 @@
   <main class="main">
     <span>Ubicación</span>
     <section>
-      <div class="card" style="width: 50rem;">
+      <div class="mapa">
         <img src="../imagen/ubicacion.png" class="img-fluid" alt="ubicación en el mapa">
       </div>
       <div class="card-body">
