--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,42 +10,40 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../sass/estilos.css">
   <meta name="description" content="contacto">
-  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
-
-</head>
-<header>
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Abret_Closet</a>
-      <a class="navbar-brand" href="#">
-        <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24"
-          class="d-inline-block align-text-top"> </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/prendas.html">Prendas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/fechas.html">Fechas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/contacto.html">Nosotros</a>
-          </li>
-        </ul>
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION" </head>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Abret_Closet</a>
+        <a class="navbar-brand" href="#">
+          <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24"
+            class="d-inline-block align-text-top"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/prendas.html">Prendas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/fechas.html">Fechas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Nosotros</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
 <body class="body">
   <main class="main">
@@ -92,6 +90,7 @@
             <p class="card-text">Quienes quieran sumarse a la movida de ferias, tanto para comprar como para
               vender
               pueden contactarnos en las redes sociales:
+
             <div class="col"><i class="bi bi-whatsapp"></i>
               1165137673
             </div>
@@ -113,24 +112,38 @@
         Colaboramos con el comedor SOLCITO</span>
       <span class="colaboramos">¿Querés donar tu ropa? CONTACTANOS</span>
     </section>
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input type="celular" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">celular</label>
-    </div>
-  </section>
+    <form id="form">
+      <div class="field">
+        <label for="from_name">Nombre</label>
+        <input type="text" name="from_name" id="from_name">
+      </div>
+      <div class="field">
+        <label for="from_email">Email</label>
+        <input type="text" name="from_email" id="from_email">
+      </div>
+      <div class="field">
+        <label for="from_phone">Celular</label>
+        <input type="text" name="from_phone" id="from_phone">
+      </div>
+      <div class="field">
+        <label for="message">Consulta</label>
+        <input type="text" name="message" id="message">
+      </div>
+
+      <input type="submit" id="button" value="Send Email">
+    </form>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="../js/enviarform.js"></script>
   </main>
   <footer class="footer">
     <p class="creador">@ Marcela Fernanda Peralta 2022</p>
   </footer>
 
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-</body>
+  <!--JavaScript Bundle with Popper-- >
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body >
 
-</html>
+</html >
