edicion con correcciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,8 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../sass/estilos.css">
+  <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
   <meta name="description" content="contacto">
-  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION" </head>
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION" >
+</head>
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
@@ -25,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href=" ../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/prendas.html">Prendas</a>
@@ -50,67 +52,85 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../imagen/STAFF ABRETCLOSET.jpeg" class="card-img-top" alt="staff Abret_Closet">
+          <img src="../imagen/STAFF ABRETCLOSET.jpeg" class="shake-little" alt="staff Abret_Closet">
           <div class="card-body">
-            <h5 class="card-title">PARTE DEL STAFF DE Abret_Closet</h5>
-            <p class="card-text">“Teníamos realmente mucha ropa, al ser cinco mujeres desde chicas la ropa iba y
+            <h5 class="fw-bold fs-2">PARTE DEL STAFF</h5>
+            <p class="fs-3">“Teníamos realmente mucha ropa, al ser cinco mujeres desde chicas la ropa iba y
               venía,
               cuando fuimos creciendo el problema creció con nosotras y entendimos que debíamos hacer algo, la
               feria
-              nació así en el living de casa y con familia”</p>
+              nació así en el living de casa y con familia”
+            </p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../imagen/reciclar-tu-ropa.jpg" class="card-img-top" alt="logo reciclar">
+          <img src="../imagen/reciclar-tu-ropa.jpg" class="shake-little" alt="logo reciclar">
           <div class="card-body">
-            <h5 class="card-title">RE-CIRCULAR</h5>
-            <p class="card-text">Una prenda de ropa tarda 200 años en desintegrase, se utilizan entre 10 y 19 mil litros
-              de agua en la confección de un jeans, la producción de ropa y calzado produce el 8% de los gases de efecto
-              invernadero.
-              Asumimos el compromiso de re-circular la ropa en pos de reducir el impacto de la industria
-              textil.
-              Creemos que todo cambio inicia en unx mismo y se expande a lo colectivo. Queremos ser parte de ese
-              proceso.
-
-              Desde Enero 2022, trabajamos para cumplir con el propósito del Abret_Closet. Hasta el momento logramos:
-
-              RE-CIRCULAR + DE 2.000 PRENDAS
-
-              DONAR + DE 500 PRENDAS</p>
+            <h5 class="fw-bold fs-2">RE-CIRCULAR</h5>
+            <p class="fs-3">Una prenda de ropa tarda 200 años en desintegrase, se utilizan entre 10 y 19 mil litros de agua en la confección de un jeans, la producción de ropa y calzado produce el 8% de los gases de efecto
+              invernadero. Por eso asumimos el compromiso de re-circular la ropa en pos de reducir el impacto de la industria textil.
+            </p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../imagen/LOGO.jpg" class="card-img-top" alt="imagen logo">
+          <img src="../imagen/recicla.webp" class="shake-little" alt="imagen logo">
           <div class="card-body">
-            <h5 class="card-title">Abret_Closet</h5>
-            <p class="card-text">Quienes quieran sumarse a la movida de ferias, tanto para comprar como para
-              vender
-              pueden contactarnos en las redes sociales:
-
-            <div class="col"><i class="bi bi-whatsapp"></i>
+            <h5 class="fw-bold fs-2">CUIDA EL MEDIO AMBIENTE</h5>
+            <p class="fs-3">Al dar una segunda oportunidad a una prenda evitas que ésta termine en la basura y por ende, en nuestros campos. Es una forma de alargar su ciclo de uso, reutilizar y reciclar, disminuyendo los altos índices de contaminación que enfrentamos y las consecuencias negativas que esto trae para el medio ambiente.
+                    
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="../imagen/medios de pago.png" class="shake-little" alt="staff Abret_Closet">
+          <div class="card-body">
+            <h5 class="fw-bold fs-2">MEDIOS DE PAGO</h5>
+            <p class="fs-3">Podes pagarnos de diferentes formas al momento de realizar tu compra. También tenemos PREVENTA ONLINE. Si te gusta alguna prenda en nuestra plataforma, la podés reservar con el 50%.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../imagen/CONSIGNACION.png" class="shake-little" alt="logo reciclar">
+          <div class="card-body">
+            <h5 class="fw-bold fs-2">CONSIGNACIÓN</h5>
+            <p class="fs-3">Te llevás el 60% del precio de venta en efectivo a medida de que se van vendiendo. Es muy importante que la ropa que selecciones esté en buenas condiciones, es decir lavada, sin manchas ni roturas. En la categoría calzados tomamos por el momento zapatillas urbanas de hombre y mujer. 
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../imagen/LOGO.jpg" class="shake-little" alt="imagen logo">
+          <div class="card-body">
+            <h5 class="fw-bold fs-2">ABRET_CLOSET </h5>
+            <p class="fs-3">Quienes quieran sumarse a la movida de ferias, tanto para comprar como para vender, o si les interesa que mostremos sus productos, pueden contactarnos en las redes sociales:
+            <div class="fs-2"><i class="bi bi-whatsapp"></i>
               1165137673
             </div>
-            <div class="col"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+            <div class="fs-2"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
             </div>
             <div>
-              <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+              <a class="fs-2" href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
             </div>
             </p>
           </div>
         </div>
       </div>
     </div>
-    </div>
-    </div>
-    </section>
     <section>
       <span class="colaboramos">
         Colaboramos con el comedor SOLCITO</span>
-      <span class="colaboramos">¿Querés donar tu ropa? CONTACTANOS</span>
+      <span class="fs-2 colaboramos">¿Querés donar tu ropa? CONTACTANOS</span>
     </section>
     <form id="form">
       <div class="field">
@@ -136,14 +156,13 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="../js/enviarform.js"></script>
   </main>
-  <footer class="footer">
-    <p class="creador">@ Marcela Fernanda Peralta 2022</p>
-  </footer>
+  <hr>
+<footer class="footer">
+  <p class="creador">@ Marcela Fernanda Peralta 2022</p>
+</footer>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
 
-  <!--JavaScript Bundle with Popper-- >
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-</body >
-
-</html >
+</html>
