--- a/pages/prendas.html
+++ b/pages/prendas.html
@@ -11,7 +11,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../sass/estilos.css">
   <meta name="description" content="prendas para vender">
-  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION">
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-light">
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href=" ../index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./prendas.html">Prendas</a>
@@ -49,14 +49,14 @@
 
 <body class="body">
   <main class="mainprendas">
-    <div class="row row-cols-md-2 row-cols-md-2 g-4">
+    <div class="row row-cols-md-1 row-cols-md-2 g-3">
       <div class="col">
         <div class="card">
           <img src="../imagen/conjunto con zapatos.jpeg" class="card-img-top" alt="conjunto 1">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 1</h5>
-            <p class="card-text">Remera Hippie + Jean + Sandalias rosa viejo</p>
-            <p class="card-text"><small class="text-muted">$2500</small></p>
+            <h5 class="fw-bold fs-2">CONJUNTO 1</h5>
+            <p class="fs-3">Remera Hippie + Jean + Sandalias rosa viejo</p>
+            <p class="fs-3"><small class="text-muted">$2500</small></p>
           </div>
         </div>
       </div>
@@ -64,9 +64,9 @@
         <div class="card">
           <img src="../imagen/conjunto jean.jpeg" class="card-img-top" alt="conjunto 2">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 2</h5>
-            <p class="card-text">CONJUNTO 2: Remera básica + Jean + Cartera</p>
-            <p class="card-text"><small class="text-muted">$2500</small></p>
+            <h5 class="fw-bold fs-2">CONJUNTO 2</h5>
+            <p class="fs-3">CONJUNTO 2: Remera básica + Jean + Cartera</p>
+            <p class="fs-3"><small class="text-muted">$2500</small></p>
           </div>
         </div>
       </div>
@@ -74,9 +74,9 @@
         <div class="card">
           <img src="../imagen/conjunto mujer.jpeg" class="card-img-top" alt="conjunto 3">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 3</h5>
-            <p class="card-text">CONJUNTO 2: Remera básica + Jean + Cartera</p>
-            <p class="card-text"><small class="text-muted">$4500</small></p>
+            <h5 class="fw-bold fs-2">CONJUNTO 3</h5>
+            <p class="fs-3">CONJUNTO 2: Remera básica + Jean + Cartera</p>
+            <p class="fs-3"><small class="text-muted">$4500</small></p>
           </div>
         </div>
       </div>
@@ -84,9 +84,9 @@
         <div class="card">
           <img src="../imagen/jean y camisa.jpeg" class="card-img-top" alt="conjunto 4">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 4</h5>
-            <p class="card-text">Camisa + Jean + botas</p>
-            <p class="card-text"><small class="text-muted">$3200</small></p>
+            <h5 class="fw-bold fs-2">CONJUNTO 4</h5>
+            <p class="fs-3">Camisa + Jean + botas</p>
+            <p class="fs-3"><small class="text-muted">$3200</small></p>
           </div>
         </div>
       </div>
@@ -96,9 +96,9 @@
         <div class="card">
           <img src="../imagen/jean y campera.jpeg" class="card-img-top" alt="conjunto 5">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 5</h5>
-            <p class="card-text">Remera con diseño + Jean + Campera de Jogging</p>
-            <p class="card-text"><small class="text-muted">$3500 y por $300 más te llevas la riñonera (precio normal
+            <h5 class="fw-bold fs-2">CONJUNTO 5</h5>
+            <p class="fs-3">Remera con diseño + Jean + Campera de Jogging</p>
+            <p class="fs-3"><small class="text-muted">$3500 y por $300 más te llevas la riñonera (precio normal
                 $700)</small></p>
           </div>
         </div>
@@ -107,9 +107,9 @@
         <div class="card">
           <img src="../imagen/vestido.jpeg" class="card-img-top" alt="conjunto 6">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 6</h5>
-            <p class="card-text">Vestido cuadrille + zapatos negros</p>
-            <p class="card-text"><small class="text-muted">$2000 y por $300 más te llevas la riñonera (precio normal
+            <h5 class="fw-bold fs-2">CONJUNTO 6</h5>
+            <p class="fs-3">Vestido cuadrille + zapatos negros</p>
+            <p class="fs-3"><small class="text-muted">$2000 y por $300 más te llevas la riñonera (precio normal
                 $700)</small></p>
           </div>
         </div>
@@ -118,9 +118,9 @@
         <div class="card">
           <img src="../imagen/conjunto.jpeg" class="card-img-top" alt="conjunto 7">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 7</h5>
-            <p class="card-text">Pantalón de vestir + blusa + zapatos</p>
-            <p class="card-text"><small class="text-muted">$2400 y te llevas de regalo un pañuelo haciendo juego (precio
+            <h5 class="fw-bold fs-2">CONJUNTO 7</h5>
+            <p class="fs-3">Pantalón de vestir + blusa + zapatos</p>
+            <p class="fs-3"><small class="text-muted">$2400 y te llevas de regalo un pañuelo haciendo juego (precio
                 regular $400)</small></p>
           </div>
         </div>
@@ -129,9 +129,9 @@
         <div class="card">
           <img src="../imagen/vestido (2).jpeg" class="card-img-top" alt="conjunto 8">
           <div class="card-body">
-            <h5 class="card-title">CONJUNTO 8</h5>
-            <p class="card-text">Vestido Hippie + camperita de jean</p>
-            <p class="card-text"><small class="text-muted">Ambas por $2100</small></p>
+            <h5 class="fw-bold fs-2">CONJUNTO 8</h5>
+            <p class="fs-3">Vestido Hippie + camperita de jean</p>
+            <p class="fs-3"><small class="text-muted">Ambas por $2100</small></p>
           </div>
         </div>
       </div>
