--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="./sass/estilos.css">
   <meta name="description" content="venta de ropa usada">
-  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION">
   <title>Abret_Closet</title>
 </head>
 <header>
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/prendas.html">Prendas</a>
@@ -62,6 +62,8 @@
               Tenés la posibilidad de hacer circular tu placard, ayudás a que el mundo sea un lugar más
               sostenible, y además, te llevás efectivo o una prenda nueva.
             </p>
+            <img src="./imagen/tu ex.png" class="shake-little" width="270" height="400"  alt="EX">
+                      
           </div>
           <div class="col">
             <p class="segunda">
@@ -69,13 +71,12 @@
               una alternativa sustentable para un vestir consciente
             </p>
             <div class="video">
-              <iframe width="300" height="300" src="imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4" title="Preventa"
+              <iframe width="300" height="300" src="./imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4" title="Preventa"
                 frameborder="0"
                 llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-              </p>
               <div class="video">
-                <iframe width="300" height="300" src="../imagen/oferta.mp4" title="ofertas" frameborder="0"
+                <iframe width="300" height="300" src="./imagen/oferta.mp4" title="ofertas" frameborder="0"
                   llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
               </div>
@@ -84,15 +85,16 @@
         </div>
       </div>
     </section>
-    <span class="alimento">Si traes un alimento no perecedero tenes un descuento en tu compra</span>
+    <span class="alimento">Ya logramos RE-CIRCULAR + DE 2.000 PRENDAS Y DONAR + DE 500.  
+    </span>
+    
 
   </main>
-</body>
+
 <hr>
 <footer class="footer">
   <p class="creador">@ Marcela Fernanda Peralta 2022</p>
 </footer>
-</div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
