--- a/pages/fechas.html
+++ b/pages/fechas.html
@@ -10,7 +10,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../sass/estilos.css">
   <meta name="description" content="fechas de las ferias">
-  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION">
 </head>
 
 <body class="body">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href=" ../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/prendas.html">Prendas</a>
@@ -52,23 +52,48 @@
       <div class="card">
         <img src="../imagen/Feria1607.jpg" class="card-img-top" alt="banner 16 julio">
         <div class="card-body">
-          <h5 class="card-title">16 JULIO</h5>
-          <p class="card-text">Vamos a sacar nuestra ropa por primera vez, acercáte y conocenos.</p>
+          <h5 class="fw-bold fs-2">16 DE JULIO</h5>
+          <p class="fs-3">Vamos a sacar nuestra ropa por primera vez, acercáte y conocenos.</p>
         </div>
       </div>
       <div class="card">
         <img src="../imagen/feria78.jpg" class="card-img-top" alt="banner 7 Agosto">
         <div class="card-body">
-          <h5 class="card-title">7 AGOSTO</h5>
-          <p class="card-text">En esta oportunidad nos acompaña TupperlandbyPato</p>
+          <h5 class="fw-bold fs-2">7 DE AGOSTO</h5>
+          <p class="fs-3">En esta oportunidad nos acompaña TupperlandbyPato</p>
           <a href="https://www.instagram.com/tupperlandbypato/" class="TupperlandbyPato">tupperlandbypato</a>
         </div>
       </div>
       <div class="card">
         <img src="../imagen/FERIA1308.jpg" class="card-img-top" alt="BANNER 13 AGOSTO">
         <div class="card-body">
-          <h5 class="card-title">13 AGOSTO</h5>
-          <p class="card-text">Seguimos sumando ropa a este emprendimiento y nuevos emprendedores se unen a nosotros.
+          <h5 class="fw-bold fs-2">13 DE AGOSTO</h5>
+          <p class="fs-3">Seguimos sumando ropa a este emprendimiento y nuevos emprendedores se unen a nosotros.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-group">
+      <div class="card">
+        <img src="../imagen/4.9.jpeg" class="card-img-top" alt="banner 4 septiembre">
+        <div class="card-body">
+          <h5 class="fw-bold fs-2">4 DE SEPTIEMBRE</h5>
+          <p class="fs-3">Vení a ver la ropa de la nueva temporada</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="../imagen/10.9.png" class="card-img-top" alt="banner 10 Septiembre">
+        <div class="card-body">
+          <h5 class="fw-bold fs-2">10 DE SEPTIEMBRE</h5>
+          <p class="fs-3">No te pierdas esyos articulos únicos nuevos y usados a precios increibles</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="../imagen/24.9.png" class="card-img-top" alt="BANNER 13 AGOSTO">
+        <div class="card-body">
+          <h5 class="fw-bold fs-2">24 DE SEPTIEMBRE</h5>
+          <p class="fs-3">Liquidación de invierno. Llevate 2 sweeters al precio de 1
           </p>
         </div>
       </div>
