--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -10,7 +10,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../sass/estilos.css">
   <meta name="description" content="ubicación para comprar ropa usada">
-  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION"
+  <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION">
 </head>
 <header>
   <nav class="navbar navbar-expand-lg bg-light">
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href=" ./index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href=" ../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../pages/prendas.html">Prendas</a>
@@ -48,13 +48,13 @@
 
 <body class="body">
   <main class="main">
-    <span>Ubicación</span>
+    <span class="fw-bold fs-2">UBICACIÓN</span>
     <section>
       <div class="mapa">
         <img src="../imagen/ubicacion.png" class="img-fluid" alt="ubicación en el mapa">
       </div>
       <div class="card-body">
-        <p class="card-text">SANTA ANA 1042, entre Italia y Las Heras, San Miguel</p>
+        <p class="fs-3">SANTA ANA 1042, entre Italia y Las Heras, San Miguel</p>
         <a href="https://www.google.com/maps/dir/-34.5596345,-58.7030331/abret.closet/@-34.5580607,-58.7213877,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x95bcbdfda50b7281:0xcfeb50858bb02956!2m2!1d-58.7223398!2d-34.5615495"
           class="card-link">Google Maps</a>
       </div>
@@ -98,6 +98,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </section>
   </main>
 
   <!-- JavaScript Bundle with Popper -->
