--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 <body>
   <main class="sectionmain">
     <section>
-      <h1 class="tituloprincipal"> Abret_Closet </h1>
+      <h1 class="tituloprincipal"> <p class="fw-bold fs-1">Abret_Closet </p></h1>
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <p class="articulo">
+            <p class="fs-3">
               Lo que compraste y nunca usaste,
               lo que te regalaron y no te gustó,
               lo que usaste y cuidaste con todo amor,
@@ -66,7 +66,7 @@
                       
           </div>
           <div class="col">
-            <p class="segunda">
+            <p class="fs-3">
               FERIA CIRCULAR
               una alternativa sustentable para un vestir consciente
             </p>
@@ -85,7 +85,7 @@
         </div>
       </div>
     </section>
-    <span class="alimento">Ya logramos RE-CIRCULAR + DE 2.000 PRENDAS Y DONAR + DE 500.  
+    <span class="fs-3">Ya logramos RE-CIRCULAR + DE 2.000 PRENDAS Y DONAR + DE 500.  
     </span>
     
 
